# avs-device-sdk

./: README.md
ACL/src/Transport/: HTTP2Stream.cpp
Integration/: PorcupineConfig.json
KWD/: CMakeLists.txt
KWD/KWDProvider/src/: CMakeLists.txt  KeywordDetectorProvider.cpp
KWD/Porcupine/: CMakeLists.txt
KWD/Porcupine/include/Porcupine/: PorcupineKeyWordDetector.h
KWD/Porcupine/src/: CMakeLists.txt  PorcupineKeyWordDetector.cpp
SampleApp/src/: CMakeLists.txt  main.cpp
